# nemotron-voice-agent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  apt.txt  docker-compose.jetson.yml  docker-compose.yml  postBuild.bash  preBuild.bash  pyproject.toml  requirements.txt  third_party_oss_license.txt  variables.env
.project/: configpacks  spec.yaml
config/: env.example  env.jetson.example  ipa.json  prompt.yaml
docs/: 01-getting-started.md  02-configuration-guide.md  03-jetson-thor.md  04-best-practices.md  05-nvidia-pipecat.md  06-evaluation-and-performance.md
docs/how-to/: choose-transport-method.md  configure-tts-settings.md  customize-system-prompts.md  enable-multilingual.md  enable-opentelemetry-tracing.md  enable-zero-shot-tts.md  switch-llm-models.md  tune-pipeline-performance.md
frontend/: Dockerfile  README.md  start-server.py
frontend/webrtc_ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/webrtc_ui/src/: App.tsx  AudioStream.tsx  AudioWaveForm.tsx  MicrophoneButton.tsx  PromptInput.tsx  Transcripts.tsx  VoiceSelector.tsx  WebRTCButton.tsx  config.ts  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/webrtc_ui/src/components/ui/: header.tsx  (+2 more)
frontend/webrtc_ui/src/hooks/: use-pipecat-webrtc.ts
frontend/webrtc_ui/src/lib/: utils.ts
frontend/webrtc_ui/src/utils/: waitForICEGatheringComplete.ts
frontend/websocket_ui/static/: frames.proto  index.html
src/: __init__.py  pipeline.py  pipeline_websocket.py
